// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`load_conversation tool loading conversations successfully should filter messages by date range 1`] = `
"# Conversation 33333

**Conversation ID:** 33333
**Workspace ID:** 11111
**Archived:** No
**Last Active:** 2024-01-01T00:00:00.000Z

## Participants

Test User 1, 

## Messages (0)
"
`;

exports[`load_conversation tool loading conversations successfully should handle conversation with no messages 1`] = `
"# Conversation 33333

**Conversation ID:** 33333
**Workspace ID:** 11111
**Archived:** No
**Last Active:** 2024-01-01T00:00:00.000Z

## Participants

Test User 1, 

## Messages (0)
"
`;

exports[`load_conversation tool loading conversations successfully should load conversation with messages and participants 1`] = `
"# Conversation 33333

**Conversation ID:** 33333
**Workspace ID:** 11111
**Archived:** No
**Last Active:** 2024-01-01T00:00:00.000Z

## Participants

Test User 1, Test User 2

## Messages (2)

### Message 98765
**Creator:** Test User 1 | **Posted:** 2024-01-01T00:00:00.000Z

Test message content

### Message 98766
**Creator:** Test User 1 | **Posted:** 2024-01-01T00:00:00.000Z

Test message content
"
`;

exports[`load_conversation tool loading conversations successfully should load conversation without participants when includeParticipants is false 1`] = `
"# Conversation 33333

**Conversation ID:** 33333
**Workspace ID:** 11111
**Archived:** No
**Last Active:** 2024-01-01T00:00:00.000Z

## Messages (0)
"
`;
